--- a/w3data/src/styles/Uploadform.css
+++ b/w3data/src/styles/Uploadform.css
@@ -103,3 +103,19 @@ input[type="file"]{
     background-color: #27293d;
     padding: 20px;
 }
+.instruction-icon-upload{
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 9px;
+    cursor: pointer;    
+}
+.instruction-span {
+margin-left: 5px;
+font-size: .75rem;
+font-weight: 400;
+line-height: 1.42857;
+font-family: poppins,sans-serif;
+color: #9a9a9a;   
+padding-left: 5px;
+padding-top: 5px;
+}
